--- a/views/competitions/score.handlebars
+++ b/views/competitions/score.handlebars
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <th>ID prijave</th>
-                <th>Ime antjecatelja </th>
+                <th>Ime natjecatelja </th>
                 <th>Ime natjecanja</th>
                 <th>Prijavljen u </th>
                 <th>Broj bodova </th>
