--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
             <a href="/users/signout" class="btn btn-sm btn-accent">Odjava</a>
         </div>
         <div class="flex-1">
-            <a href="/recenzije" class="btn btn-sm btn-success">Recenzije</a>
+            <a href="users/recenzije" class="btn btn-sm btn-success">Recenzije</a>
         </div>
     </div>
     {{/unless}}
