--- a/views/users/recenzije.handlebars
+++ b/views/users/recenzije.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <h2>Ocijenite stranicu</h2>
-    <form method="post" action="/competitions/sent">
+    <form method="post" action="/users/sent">
         <div class="form-group">
             <label for="rating">Ocjena:</label>
             <select id="rating" name="rating">
