--- a/views/competitions/index.handlebars
+++ b/views/competitions/index.handlebars
@@ -37,6 +37,7 @@
                         <a href="/competitions/print/{{this.id}}" class="btn btn-info btn-xs">Ispis</a>
                         <a href="/competitions/signup/{{this.id}}" class="btn btn-active btn-primary btn-xs">Prijava</a>
                         <a href="/competitions/score/{{this.id}}" class="btn btn-neutral btn-xs">Rezultati</a>
+                        <a href="/{{this.id}}" class="btn btn-warning btn-xs">Nagrada</a>
                     </td>
                 </tr>
                 {{/each}}
